# subconvert

./: .gitignore  .gitmodules  LICENSE  Makefile.am  NOTES.org  README  SubConvert.py  authors.txt  configure.ac  migrate.py  modules.sh  patch-config.sh  subconvert.cpp  update.sh  version.m4
doc/: NOTES.org  TODO.org  authors.txt  branches.txt  subconvert.1
py/: compare-revs.py
src/: authors.cpp  authors.h  branches.cpp  branches.h  converter.cpp  converter.h  git-monitor.cpp  gitutil.cpp  gitutil.h  main.cpp  revmap.cpp  status.h  subconvert.cpp  submodule.cpp  submodule.h  svndump.cpp  svndump.h  system.hpp.in
